--- a/problema1/prob1-informe/informe.tex
+++ b/problema1/prob1-informe/informe.tex
@@ -2,6 +2,7 @@
 \documentclass[11pt, a4paper, twoside]{article}
 \usepackage{header}
 \usepackage{config}
+\usepackage[lined, boxed, commentsnumbered]{algorithm2e}
 % -------------------------------------
 \begin{document}
 
@@ -184,19 +185,144 @@ el vuelo 2 llega a ezeiza, no se puede hacer nada por la misma razón. En el ter
 paso, se puede añadir las combinaciones entre los vuelos 3-1 y 3-5, pues el vuelo 3
 llega a bragado y de bragado salen dos vuelos: el 1 y el 5. Por la misma razón
 que no se pudo hacer nada para el vuelo 2, tampoco se puede hacer nada para los vuelos
-4 y 5 y en los dos últimos pasos. \\
+4 y 5 y en los dos últimos pasos. A continuación, introducimos un 
+pseudocódigo del algoritmo que utilizamos. \\
+
+\begin{algorithm}[H]
+\SetKwInOut{Input}{input}
+\SetKwInOut{Output}{output}
+  \Input{ciudad A origen, ciudad B destino, tamaño de lista de vuelos $n$ y lista 
+         de vuelos donde cada vuelos es una tupla$<$orig,destino,salida,llegada$>$}
+  \Output{horario minimo de llegada, cantidad de vuelos necesarios,
+          posible itinerario de vuelos para lograr llegar en el horario mínimo}
+  \BlankLine
+  Vector puedoLlegar(n); \emph{guardo desde qué vuelos se puede llegar al destino B} \\
+  Matriz combinaciones(n,n); \emph{guardo desde qué vuelos se puede llegar a cada vuelo}\\
+  \BlankLine
+  \emph{Armo la matriz inicial: para cada vuelo anoto con cuales puede combinar
+        de forma directa. Notación: e(j) es un vector de tamaño $n$ con todos ceros
+        a excepción de la j-ésima posición, en la que tiene un 1.} \\
+  \For{$i$ $\leftarrow$ 0 to $n-1$}{ 
+	\For{$j$ $\leftarrow$ 0 to $n-1$}{
+		\If{horarioBien ($V_{i}$, $V_{j}$) and ciudadBien($V_{i}$, $V_{j}$)} { 
+			\emph{Hay vuelo directo de $V_{i}$ a $V_{j}$. Entonces, actualizo la matriz
+			Combinaciones poniendo un 1 en el j-ésimo lugar de la fila i. Observar que
+			Combinaciones[i] es un vector de tamaño n.} \\
+				Combinaciones[i] = Combinaciones[i] OR e(j); \\
+			\emph{Además, si en el i-ésimo lugar de PuedoLlegar hay un 1, pongo un 1 en el 
+			j-ésimo lugar de PuedoLlegar, pues ahora también puedo llegar al destino B desde 
+			el vuelo j (haciendo combinación con el vuelo i). } \\
+			\If{(PuedoLlegar AND e(i)) = 1} {
+				PuedoLlegar = PuedoLlegar OR e(j); \\
+			}
+		}
+	}
+  }
+  \BlankLine
+  \emph{Armo la matriz de alcance: para cada vuelo, a qué vuelos puede llegar y al mismo tiempo
+        voy actualizando desde qué vuelos puedo llegar al destino B.} \\
+  \For{$i$ $\leftarrow$ 0 to $n-1$}{ 
+	\For{$j$ $\leftarrow$ 0 to $n-1$}{
+		\emph{Si existe un itinerario que me permita llegar al vuelo j desde el vuelo i
+			  actualizo la matriz Combinaciones pues ahora 
+			  desde el vuelo i también se va a poder llegar a los vuelos a los cuales
+			  sólo se podía llegar desde el vuelo j} \\
+		\If{(Combinaciones[i] AND e(j)) = 1} {
+			Combinaciones[i] = Combinaciones[i] OR Combinaciones[j]; \\
+		}
+		\emph{Si desde el vuelo j se podía llegar al destino B, entonces ahora también
+		      se va a poder llegar al destino B desde el vuelo i. Actualizo el vector 
+		      PuedoLlegar.} \\
+		\If{(PuedoLlegar AND e(j)) = 1} {
+			PuedoLlegar = PuedoLlegar OR e(i); \\
+		}
+	}
+  }
+  resultado = traceBack(Combinaciones, PuedoLlegar,destino B); \\
+  return resultado;
+
+\caption{Pseudocódigo para el algoritmo empleado en la resolución}
+\end{algorithm}
 
 Entonces, como se ve en los ejemplos de más arriba, lo que hace nuestro algoritmo
-es ir vuelo por vuelo, actualizando para cada uno los vuelos a los cuáles puede
-ir y desde los cuáles se puede llegar. Al terminar de actualizar el último vuelo,
+es ir vuelo por vuelo, actualizando para cada uno los vuelos, a cuáles puede
+ir y desde cuáles se puede llegar. Al terminar de actualizar el último vuelo,
 en la fila $i$ de nuestra matriz va a formar un vector $v_{i}$, que en la posición
 $j$ va a tener un 1 si y sólo si hay un posible itinerario de vuelos que permite
 llegar desde el vuelo $i$ al vuelo $j$. \\
 
+Ahora, pasamos a describir el algoritmo $traceBack$ que hace el traceback para definir exactamente
+qué combinación de vuelos hacer, a partir de la matriz final Combinaciones y del vector 
+PuedoLlegar. \\
+
+\begin{algorithm}[H]
+\SetKwInOut{Input}{input}
+\SetKwInOut{Output}{output}
+  \Input{Matriz Combinaciones, vector PuedoLlegar, ciudad B destino}
+  \Output{horario minimo de llegada, cantidad de vuelos necesarios,
+          posible itinerario de vuelos para lograr llegar en el horario mínimo}
+  vector resultado(0); \\
+  horarioLlegada = INF; \\
+  ultimo = INF; \\
+  \For{$i$ $\leftarrow$ 0 to $n-1$}{
+		\If{(PuedoLlegar AND e(i)) = 1 AND destino($V_{i}$) = B AND 
+		    fin($V_{i}$) $<$ horarioLlegada} {
+			horarioLlegada = fin($V_{i}$); \\
+			ultimo = i; \\
+		}
+  }
+  \If{horarioLlegada = INF} {
+		return "no"; \\
+  }
+  \BlankLine 
+  \emph{Si hay un posible itinerario para llegar desde A a B, lo construyo.} \\
+  Agregar(resultado, horarioLlegada); \\
+  vector temp; \\
+  vector usados(n, 0); \\
+   %\lElse {
+        Agregar(temp, ultimo); \\
+		\While{origen($V_{ultimo}$) $\neq$ B}{
+			 \For{$i$ $\leftarrow$ 0 to $n-1$}{
+				 \If{destino($V_{i}$) = origen($V_{ultimo}$) AND \\
+				     (puedoLlegar AND $e(i)$) = 1 AND usados[i] = 0}{
+					 ultimo = i; \\
+					 usados[i] = 1; \\
+					 Agregar(temp, ultimo); \\
+					 break; \\
+				  }  
+			 }
+		}
+  %}
+  Agregar(resultado, tam(temp)); \\
+  UnirVectores(resultado, temp); \\
+  return resultado; \\
+
+\caption{Pseudocódigo para el algoritmo empleado para hallar explícitamente 
+         qué secuencia de vuelos pueden ser tomados para llegar a destino
+         en el mínimo horario posible.}
+\end{algorithm}
+
 \subsection{Justificación de cota de complejidad}
 Para poder cumplir con la complejidad requerida, que es de $O(n^2)$, representamos
 la matriz de la cuál hablamos en la sección anterior como un vector de enteros.
-De esta forma..
+De esta forma, podemos actualizar una fila entera de la matriz en $O(1)$, mediante 
+operaciones como OR y AND. \\
+Ahora, analizaremos la complejidad de los algoritmos 1 y 2 detallados en la sección anterior: \\
+El algoritmo 1 se puede ver que la complejidad es $O(n^2)$ pues consta de dos doble ciclos que
+recorren desde $i = 0$ hasta $i = n-1$. \\
+Para el algoritmo 2, el análisis que hay que hacer es más fino: en la primera parte, tenemos un
+$for$ que recorre desde $i = 0$ hasta $i = n-1$, con lo cual ahí tenemos una complejidad de $O(n)$.
+Al terminar este $for$, tenemos también un doble ciclo, pero esta vez un $for$ adentro de un $while$.
+Cuando se entra al $while$, el vector resultado tiene un único elemento: el índice de un último 
+vuelo posible de algún posible itinerario (que seguro existe) para llegar desde A hasta B.
+Veamos que no se entra al cuerpo del $while$ más de $n$ veces: tras la finalización de cada
+iteración del $while$, el último elemento del vector resultado es el número de algún vuelo desde el 
+cuál se puede llegar al destino B y no es uno de los vuelos que ya agregamos al vector resultado.
+Entonces, como sabemos que efectivamente hay una solución, y en cada iteración del $while$ agregamos 
+al menos un nuevo vuelo a la solución, cuando hayamos agregado $n$ vuelos a la solución, el destino
+de ese n-ésimo vuelo seguro será B. Luego, no se entra al cuerpo del $while$ más de $n$ veces. \\
+Entonces, la complejidad del algoritmo 2 también es $O(n^2)$, con lo cual la complejidad del 
+algoritmo completo es de $O(n^2)$. \\
 
 \subsection{Testeos de complejidad}
 
