actualizo las cosas

--- a/problema3/informe/informe.tex
+++ b/problema3/informe/informe.tex
@@ -172,7 +172,7 @@ $costo(T+e) = \min\limits_{\substack{f \in G \backslash T \\ T' \in S}} costo(T'
 \begin{proof}[Demostración de la Proposición 1] 
 Demostraremos ambas desigualdades:
 \begin{flushleft} $\leq$ : en este caso, vale que $ costo(T) \leq costo(T')$ y además $costo(e) <= costo(f) $. 
-Entonces, es evidente que $ costo(T+e) = costo(T)+costo(e) \leq costo(T')+costo(f) = costo(T'+f) $  \\
+Entonces, es evidente que $ costo(T+e) = costo(T)+costo(e) \leq costo(T')+costo(f) = costo(T'+f) $  FALTAN COSAS \\
 $\geq$ : Tomando $T'=T$ y $f=e$, tenemos que $costo(T'+f)=costo(T+e)$. 
 Entonces, sigue que $ \min\limits_{\substack{f \in G \backslash T \\ T' \in S}} costo(T'+f) \leq costo(T+e) $
 \end{flushleft}
